# Aircraft_classification

./: Pointnet_Evitado.ipynb  README.md
Segmentation_Flight/: CMakeLists.txt  flight_segmentation.cpp
data/a319/: a319_0.pcd  a319_1.pcd  a319_10.pcd  a319_11.pcd  a319_12.pcd  a319_13.pcd  a319_14.pcd  a319_15.pcd  a319_16.pcd  a319_17.pcd  a319_18.pcd  a319_19.pcd  a319_2.pcd  a319_20.pcd  a319_21.pcd  a319_22.pcd  a319_23.pcd  a319_24.pcd  a319_25.pcd  a319_26.pcd  a319_27.pcd  a319_28.pcd  a319_29.pcd  a319_3.pcd  a319_30.pcd  a319_31.pcd  a319_32.pcd  a319_33.pcd  a319_34.pcd  a319_35.pcd  a319_36.pcd  a319_37.pcd  a319_38.pcd  a319_39.pcd  a319_4.pcd  a319_40.pcd  a319_5.pcd  a319_6.pcd  a319_7.pcd  a319_8.pcd  (+1 more)
data/a320/: a320_0.pcd  a320_1.pcd  a320_10.pcd  a320_11.pcd  a320_12.pcd  a320_13.pcd  a320_14.pcd  a320_15.pcd  a320_16.pcd  a320_17.pcd  a320_18.pcd  a320_19.pcd  a320_2.pcd  a320_20.pcd  a320_21.pcd  a320_22.pcd  a320_23.pcd  a320_24.pcd  a320_25.pcd  a320_26.pcd  a320_27.pcd  a320_28.pcd  a320_29.pcd  a320_3.pcd  a320_30.pcd  a320_31.pcd  a320_32.pcd  a320_33.pcd  a320_34.pcd  a320_35.pcd  a320_36.pcd  a320_37.pcd  a320_38.pcd  a320_39.pcd  a320_4.pcd  a320_40.pcd  a320_5.pcd  a320_6.pcd  a320_7.pcd  a320_8.pcd  (+1 more)
data/a321/: a321_0.pcd  a321_1.pcd  a321_10.pcd  a321_11.pcd  a321_12.pcd  a321_13.pcd  a321_14.pcd  a321_15.pcd  a321_16.pcd  a321_17.pcd  a321_18.pcd  a321_19.pcd  a321_2.pcd  a321_20.pcd  a321_21.pcd  a321_22.pcd  a321_23.pcd  a321_24.pcd  a321_25.pcd  a321_26.pcd  a321_27.pcd  a321_28.pcd  a321_29.pcd  a321_3.pcd  a321_30.pcd  a321_31.pcd  (+15 more)
